--- a/single.html
+++ b/single.html
@@ -212,58 +212,6 @@ RIGHT SIDEBAR TOGGLE SECTION
   }
 }
 </style>
-<div class="pull-right toggle-right-sidebar">
-<span class="fa title-open-right-sidebar tooltipstered fa-angle-double-right"></span>
-</div>
-
-<div id="right-sidebar" class="right-sidebar-notifcations nav-collapse">
-<div class="bs-example bs-example-tabs right-sidebar-tab-notification" data-example-id="togglable-tabs">
-
-    <div id="w3lDemoBar" class="w3l-demo-bar">
-        <div class="demo-btns">
-        <a href="https://w3layouts.com/?p=4763800000056326">
-            <span class="w3l-icon -back">
-                <span class="fa fa-arrow-left"></span>
-            </span>
-            <span class="w3l-text">Back</span>
-        </a>
-        <a href="https://w3layouts.com/?p=4763800000056326">
-            <span class="w3l-icon -download">
-                <span class="fa fa-download"></span>
-            </span>
-            <span class="w3l-text">Download</span>
-        </a>
-        <a href="https://w3layouts.com/checkout/?add-to-cart=4763800000056326" class="no-margin-bottom-mobile">
-            <span class="w3l-icon -buy">
-                <span class="fa fa-shopping-cart"></span>
-            </span>
-            <span class="w3l-text">Buy</span>
-        </a>
-    </div>
-        <!---<div class="responsive-icons">
-            <a href="#url" class="desktop-mode">
-                <span class="w3l-icon -desktop">
-                    <span class="fa fa-desktop"></span>
-                </span>
-            </a>
-            <a href="#url" class="tablet-mode">
-                <span class="w3l-icon -tablet">
-                    <span class="fa fa-tablet"></span>
-                </span>
-            </a>
-            <a href="#url" class="mobile-mode no-margin-bottom">
-                <span class="w3l-icon -mobile">
-                    <span class="fa fa-mobile"></span>
-                </span>
-            </a>
-        </div>-->
-    </div>
-    <div class="right-sidebar-panel-content animated fadeInRight" tabindex="5003"
-        style="overflow: hidden; outline: none;">
-    </div>
-</div>
-</div>
-</div>
 
 	<!-- top-header -->
 	<div class="agile-main-top">
@@ -892,7 +840,7 @@ RIGHT SIDEBAR TOGGLE SECTION
 							</a>
 						</li>
 						<li class="nav-item dropdown mr-lg-2 mb-lg-0 mb-2">
-							<a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
+							<a class="nav-link dropdown-toggle" href="product.html" role="button" 
 								aria-haspopup="true" aria-expanded="false">
 								Electronics
 							</a>
@@ -1097,99 +1045,8 @@ RIGHT SIDEBAR TOGGLE SECTION
 </div>
 	<!-- Single Page -->
 	<div class="banner-bootom-w3-agileits py-5">
-		<div class="container py-md-5 py-4">
-			<div class="row">
-				<div class="col-lg-5 col-md-8 single-right-left ">
-					<div class="grid images_3_of_2">
-						<div class="flexslider">
-							<ul class="slides">
-								<li data-thumb="images/si1.png">
-									<div class="thumb-image">
-										<img src="images/si1.png" data-imagezoom="true" class="img-fluid" alt=""> </div>
-								</li>
-								<li data-thumb="images/si2.png">
-									<div class="thumb-image">
-										<img src="images/si2.png" data-imagezoom="true" class="img-fluid" alt=""> </div>
-								</li>
-								<li data-thumb="images/si3.png">
-									<div class="thumb-image">
-										<img src="images/si3.png" data-imagezoom="true" class="img-fluid" alt=""> </div>
-								</li>
-							</ul>
-							<div class="clearfix"></div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-lg-7 single-right-left simpleCart_shelfItem">
-					<h3 class="mb-3">Redmi 9 Prime (Space Blue, 64 GB) (4 GB RAM)</h3>
-					<p class="mb-3">
-						<span class="item_price">$360.00</span>
-						<del class="mx-2 font-weight-light">$400.00</del>
-						<label>Free delivery</label>
-					</p>
-					<div class="single-infoagile">
-						<ul>
-							<li class="mb-3">
-								Cash on Delivery Eligible.
-							</li>
-							<li class="mb-3">
-								Shipping Speed to Delivery.
-							</li>
-							<li class="mb-3">
-								EMIs from $100/month.
-							</li>
-							<li class="mb-3">
-								Bank Offer Extra 5% off* with Axis Bank Buzz Credit Card
-							</li>
-						</ul>
-					</div>
-					<div class="product-single-w3l">
-						<p class="my-3">
-							<i class="far fa-hand-point-right mr-2"></i>
-							1 Year Manufacturer Warranty
-							<ul>
-								<li class="mb-1">
-									Handset, Power Adapter, USB Type-C Cable, SIM Eject Tool, Simple Protective Cover,
-									Warranty Card, User Guide
-								</li>
-								<li class="mb-1">
-									Full HD+ IPS Display
-								</li>
-								<li class="mb-1">
-									13MP Rear Camera | 8MP Front Camera
-								</li>
-								<li class="mb-1">
-									5020 mAh
-								</li>
-								<li class="mb-1">
-									2340 x 1080 Pixels
-								</li>
-							</ul>
-							<p class="my-sm-4 my-3">
-								<i class="far fa-hand-point-right mr-2"></i>Net banking & Credit/ Debit/ ATM card
-							</p>
-					</div>
-					<div class="occasion-cart">
-						<div class="snipcart-details top_brand_home_details item_add single-item hvr-outline-out">
-							<form action="#" method="post">
-								<fieldset>
-									<input type="hidden" name="cmd" value="_cart" />
-									<input type="hidden" name="add" value="1" />
-									<input type="hidden" name="business" value=" " />
-									<input type="hidden" name="item_name" value="Samsung Galaxy J7 Prime" />
-									<input type="hidden" name="amount" value="200.00" />
-									<input type="hidden" name="discount_amount" value="1.00" />
-									<input type="hidden" name="currency_code" value="USD" />
-									<input type="hidden" name="return" value=" " />
-									<input type="hidden" name="cancel_return" value=" " />
-									<input type="submit" name="submit" value="Add to cart" class="btn btn-style" />
-								</fieldset>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
+		<div class="container py-md-5 py-4 singleid">
+			
 		</div>
 	</div>
 	<!-- //Single Page -->
@@ -1656,8 +1513,7 @@ RIGHT SIDEBAR TOGGLE SECTION
 	<!-- copyright -->
 	<div class="copy-right py-3">
 		<div class="container">
-			<p class="text-center ">© 2021 Electronics Mart. All rights reserved | Design by
-				<a href="https://w3layouts.com/"> W3layouts.</a>
+			<p class="text-center ">© 2024 Electronics Mart. All rights reserved | Design by
 			</p>
 		</div>
 	</div>
@@ -1856,6 +1712,8 @@ RIGHT SIDEBAR TOGGLE SECTION
 
 	<!--bootstrap-->
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/single.js"></script>
+	
 	<!-- //bootstrap-->
 	<!-- //Js scripts -->
 
