--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@ RIGHT SIDEBAR TOGGLE SECTION
 							<a href="#register" data-toggle="modal" data-target="#exampleModal2" class="">
 								<i class="fas fa-sign-out-alt mr-1"></i>Register </a>
 						</li>
+						
 					</ul>
 					<!-- //header lists -->
 				</div>
@@ -684,16 +685,17 @@ RIGHT SIDEBAR TOGGLE SECTION
 					</button>
 				</div>
 				<div class="modal-body">
-					<form action="#" method="post">
+					<span style="color: red; font-size:12px ;" id="message1" class="text-center mt-2"></span>
+					<form id="login-form" action="#" method="post">
 						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Username" name="Name" required="">
+							<input id="user" type="text" class="form-control" placeholder="Username" name="Name" required="">
 						</div>
 						<div class="form-group">
-							<input type="password" class="form-control" placeholder="Password" name="Password"
+							<input id="pass" type="password" class="form-control" placeholder="Password" name="Password"
 								required="">
 						</div>
 						<div class="right-w3l">
-							<input type="submit" class="form-control" value="Log in">
+							<input id="btn-sign-in" type="submit" class="form-control" value="Log in">
 						</div>
 						<div class="sub-w3l">
 							<div class="custom-control custom-checkbox mr-sm-2">
@@ -735,26 +737,27 @@ RIGHT SIDEBAR TOGGLE SECTION
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title">Register</h5>
+					<p><h5 class="modal-title">Register</h5></p>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
+					<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
 				<div class="modal-body">
-					<form action="#" method="post">
+					<span style="color: red; font-size:12px ;" id="message" class="text-center mt-2"></span>
+					<form id="register-form" action="#" method="post">
 						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Your Name" name="Name" required="">
+							<input id="name-register" type="text" class="form-control" placeholder="Your Name" name="Name" required="">
 						</div>
 						<div class="form-group">
-							<input type="email" class="form-control" placeholder="Email" name="Email" required="">
+							<input id="email-register" type="email" class="form-control" placeholder="Email" name="Email" required="">
 						</div>
 						<div class="form-group">
 							<input type="password" class="form-control" placeholder="Password" name="Password"
-								id="password1" required="">
+								id="password1-register" required="">
 						</div>
 						<div class="form-group">
 							<input type="password" class="form-control" placeholder="Confirm Password"
-								name="Confirm Password" id="password2" required="">
+								name="Confirm Password" id="password2-register" required="">
 						</div>
 						<div class="right-w3l">
 							<input type="submit" class="form-control" value="Register">
@@ -2578,7 +2581,11 @@ RIGHT SIDEBAR TOGGLE SECTION
 	<!-- //bootstrap-->
 	<!-- //Js scripts -->
 
-<script>(function(){var js = "window['__CF$cv$params']={r:'843b0555f8615dd2',t:'MTcwNDk1MzY4MS4wMzkwMDA='};_cpo=document.createElement('script');_cpo.nonce='',_cpo.src='../../../../../../cdn-cgi/challenge-platform/h/b/scripts/jsd/c8377512/main.js',document.getElementsByTagName('head')[0].appendChild(_cpo);";var _0xh = document.createElement('iframe');_0xh.height = 1;_0xh.width = 1;_0xh.style.position = 'absolute';_0xh.style.top = 0;_0xh.style.left = 0;_0xh.style.border = 'none';_0xh.style.visibility = 'hidden';document.body.appendChild(_0xh);function handler() {var _0xi = _0xh.contentDocument || _0xh.contentWindow.document;if (_0xi) {var _0xj = _0xi.createElement('script');_0xj.innerHTML = js;_0xi.getElementsByTagName('head')[0].appendChild(_0xj);}}if (document.readyState !== 'loading') {handler();} else if (window.addEventListener) {document.addEventListener('DOMContentLoaded', handler);} else {var prev = document.onreadystatechange || function () {};document.onreadystatechange = function (e) {prev(e);if (document.readyState !== 'loading') {document.onreadystatechange = prev;handler();}};}})();</script></body>
+<script>(function(){var js = "window['__CF$cv$params']={r:'843b0555f8615dd2',t:'MTcwNDk1MzY4MS4wMzkwMDA='};_cpo=document.createElement('script');_cpo.nonce='',_cpo.src='../../../../../../cdn-cgi/challenge-platform/h/b/scripts/jsd/c8377512/main.js',document.getElementsByTagName('head')[0].appendChild(_cpo);";var _0xh = document.createElement('iframe');_0xh.height = 1;_0xh.width = 1;_0xh.style.position = 'absolute';_0xh.style.top = 0;_0xh.style.left = 0;_0xh.style.border = 'none';_0xh.style.visibility = 'hidden';document.body.appendChild(_0xh);function handler() {var _0xi = _0xh.contentDocument || _0xh.contentWindow.document;if (_0xi) {var _0xj = _0xi.createElement('script');_0xj.innerHTML = js;_0xi.getElementsByTagName('head')[0].appendChild(_0xj);}}if (document.readyState !== 'loading') {handler();} else if (window.addEventListener) {document.addEventListener('DOMContentLoaded', handler);} else {var prev = document.onreadystatechange || function () {};document.onreadystatechange = function (e) {prev(e);if (document.readyState !== 'loading') {document.onreadystatechange = prev;handler();}};}})();</script>
+<script src="js/login.js"></script>
+<script src="js/login2.js"></script>
+<script src="js/register.js"></script>
+</body>
 
 
 <!-- Mirrored from p.w3layouts.com/demos_new/template_demo/11-06-2021/electronics-mart-liberty-demo_Free/1081434887/web/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 11 Jan 2024 06:15:19 GMT -->
